# gumlib

./: CMakeLists.txt  CMakePresets.json  README.md  vc140.idb  vcpkg.json
asteroids/: CMakeLists.txt
asteroids/src/: asteroid.ixx  game.ixx  main.cpp
gumlib/: CMakeLists.txt
gumlib/src/: component.ixx  config.ixx  entity.ixx  gumlib.ixx  registry.ixx  system.ixx  view.ixx  was_main.cpp  window.ixx
src/: component.ixx  config.ixx  context.ixx  gumlib.ixx  input.ixx  registry.ixx  system.ixx  view.ixx
